src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@layer base {
	body {
		font-family: 'Inter', sans-serif;
	}
}

.centered-container {
	@apply mx-auto px-5 md:px-14 max-w-screen-xl py-[5rem];
}

.section {
	@apply mt-8 mb-16;
}

.primary-cta {
	@apply bg-sky-500 hover:bg-sky-600;
}

.secondary-cta {
	@apply bg-sky-700 hover:bg-sky-800;
}

.target-class div div {
	border-radius: calc(0.4 * 1rem);
	border-color: #dcdcdc;
}

.target-class div div input {
	font-size: 16px;
	font-weight: 400;
	color: #212121;
	font-family: system-ui, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
		'Helvetica Neue', sans-serif;
	opacity: 0.95;
	height: 48px;
}
.target-class div div input::placeholder {
	font-size: 16px;
	color: #212121;
	font-weight: 400;
	font-family: system-ui, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
		'Helvetica Neue', sans-serif;
	opacity: 0.9;
}
.target-class svg {
	display: none;
}
.target-class div div div div:hover {
	border-radius: 0px; /* or whatever styling you want for hover */
}
.target-class div div div div {
	margin-left: -10px; /* or whatever styling you want for hover */
}
@media screen and (min-width: 1440px) {
	/* Styles for screens with a width of 1440px or wider */
	.search {
		margin-left: 38px;
	}
}
@media screen and (min-width: 1536px) {
	/* Styles for screens with a width of 1440px or wider */
	.search {
		margin-left: 70px;
	}
}
@media screen and (min-width: 768px) {
	/* Styles for screens with a width of 1440px or wider */
	.btn {
		width: 80px;
	}
}
@media screen and (min-width: 810px) {
	/* Styles for screens with a width of 1440px or wider */
	.btn {
		width: 120px;
	}
}

